<resources>



    <string name="app_name">盈交易</string>

    <string name="tab_main_trade">交易</string>
    <string name="tab_main_buy_what">买什么</string>
    <string name="tab_main_stock_god">股神</string>
    <string name="tab_main_descovery">发现</string>
    <string name="tab_main_competition">竞赛</string>
    <string name="tab_main_learning">学堂</string>
    <string name="tab_main_me">我的</string>



    <string name="all_product">全部产品</string>
    <string name="drag">拖拽</string>
    <string name="push_to_top">置顶</string>
    <string name="notification_switch">提醒</string>
    <string name="select_all">全部</string>
    <string name="delete">删除</string>
    <string name="done">完成</string>
    <string name="remove_hint_message">确认删除吗？</string>
    <string name="dialog_title">提示</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="pushed_to_top">已顶置</string>

    <string name="all_product_en">Products</string>
    <string name="drag_en">Drag</string>
    <string name="push_to_top_en">Top</string>
    <string name="notification_switch_en">Note</string>
    <string name="select_all_en">select all</string>
    <string name="delete_en">delete</string>
    <string name="done_en">done</string>
    <string name="remove_hint_message_en">remove comfirm？</string>
    <string name="dialog_title_en">tip</string>
    <string name="cancel_en">cancel</string>
    <string name="confirm_en">confirm</string>
    <string name="pushed_to_top_en">Top</string>


    <string-array name="jazz_artist_names">
        <item>Brad Mehldau</item>
        <item>Joshua Redman</item>
        <item>Chick Corea</item>
        <item>Kurt Rosenwinkel</item>
        <item>Miles Davis</item>
        <item>Wayne Shorter</item>
        <item>Michael Brecker</item>
        <item>Herbie Hancock</item>
        <item>Joe Zawinul</item>
        <item>Brian Blade</item>
        <item>Jeff Ballard</item>
        <item>Larry Grenadier</item>
        <item>Keith Jarrett</item>
        <item>McCoy Tyner</item>
        <item>Stephon Harris</item>
        <item>Mark Turner</item>
    </string-array>

    <string-array name="jazz_artist_symbol">
        <item>123456</item>
        <item>1221125</item>
        <item>Chick Corea</item>
        <item>Kurt Rosenwinkel</item>
        <item>Miles Davis</item>
        <item>Wayne Shorter</item>
        <item>Michael Brecker</item>
        <item>Herbie Hancock</item>
        <item>Joe Zawinul</item>
        <item>Brian Blade</item>
        <item>Jeff Ballard</item>
        <item>Larry Grenadier</item>
        <item>Keith Jarrett</item>
        <item>McCoy Tyner</item>
        <item>Stephon Harris</item>
        <item>Mark Turner</item>
    </string-array>

</resources>
